feitor novas validacoes e terminado endpoint para inserir emprestimo
